--- a/ODK.Web.Razor/Pages/Shared/_OdkChapterLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_OdkChapterLayout.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Services.Caching
 @using ODK.Web.Razor.Models.Footer
 @using ODK.Web.Razor.Models.Header
+@using ODK.Web.Razor.Pages.Chapters
 @inject IRequestCache RequestCache
 @{
     Layout = "_Layout";
