--- a/ODK.Web.Razor/wwwroot/css/_navbar.scss
+++ b/ODK.Web.Razor/wwwroot/css/_navbar.scss
@@ -14,7 +14,7 @@ $navbar-dark-separator: rgba(255, 255, 255, .5);
 }
 
 .navbar {
-    background-color: var(--odk-bg-light);
+    // background-color: var(--odk-bg-light);
 
     .navbar-toggler:focus {
         box-shadow: none;
