--- a/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Core.Utils
+﻿@using ODK.Core.Platforms
+@using ODK.Core.Utils
 @using ODK.Services.Members.ViewModels
 @using ODK.Web.Common.Routes
 @model MemberConversationsPageViewModel
@@ -17,7 +18,10 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Group</th>
+                @if (Model.Platform != PlatformType.DrunkenKnitwits)
+                {
+                    <th>Group</th>
+                }                
                 <th>Subject</th>
                 <th>Started</th>
                 <th>Last message</th>
@@ -34,11 +38,15 @@
                 var timeZone = Model.CurrentMember.TimeZone ?? chapter.TimeZone;
 
                 <tr>
-                    <td>
-                        <a href="@OdkRoutes2.Groups.Group(Model.Platform, chapter)">
-                            @chapter.Name
-                        </a>
-                    </td>
+                    @if (Model.Platform != PlatformType.DrunkenKnitwits)
+                    {
+                        <td>
+                            <a href="@OdkRoutes2.Groups.Group(Model.Platform, chapter)">
+                                @chapter.Name
+                            </a>
+                        </td>
+                    }
+                    
                     <td>
                         <a href="@OdkRoutes2.Groups.Conversation(Model.Platform, chapter, dto.Conversation.Id)">
                             @dto.Conversation.Subject
