Fix member delete

--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
@@ -32,6 +32,6 @@
     </div>
 </form>
 
-<form method="post" action="groups/@Model.Chapter.Id/members/@Model.Member.Id/delete"
+<form method="post" action="/groups/@Model.Chapter.Id/members/@Model.Member.Id/delete"
       id="member-delete-form">
 </form>
