--- a/ODK.Web.Razor/wwwroot/css/_social-media.scss
+++ b/ODK.Web.Razor/wwwroot/css/_social-media.scss
@@ -1,3 +1,9 @@
+:root {
+    --odk-social-media-facebook: #4267B2;
+    --odk-social-media-instagram: #D83175;
+    --odk-social-media-twitter: #000;
+}
+
 .social-media-image-tile {
     margin-bottom: 1rem;
     display: flex;
