--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12486,6 +12486,12 @@ html[data-platform=odk] {
   margin-bottom: 1rem;
 }
 
+:root {
+  --odk-social-media-facebook: #4267B2;
+  --odk-social-media-instagram: #D83175;
+  --odk-social-media-twitter: #000;
+}
+
 .social-media-image-tile {
   margin-bottom: 1rem;
   display: flex;
