--- a/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Services.Users.ViewModels
+@using ODK.Web.Common.Routes
 @model MemberPaymentsPageViewModel
 
 <div class="table-responsive">
@@ -17,7 +18,7 @@
             {
                 <tr>
                     <td>
-                        @dto.Chapter.Name
+                        <a href="@OdkRoutes2.Groups.Group(Model.Platform, dto.Chapter)">@dto.Chapter.Name</a>
                     </td>
                     <td>
                         @dto.Payment.PaidUtc.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
