--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -31,5 +31,6 @@
 @section scripts
 {
     <script src="/js/odk.admin.js" asp-append-version="true"></script>
+    <script src="~/js/odk.lists.js" asp-append-version="true"></script>
     @await RenderSectionAsync("scripts", required: false)
 }
