--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -51,7 +51,10 @@
                 
             @if (!Model.HideAccountMenu)
             {
-                @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
+                <div class="d-flex gap-4 account-links--right">
+                    @await Html.PartialAsync("Header/_NotificationDropdown")
+                    @await Html.PartialAsync("Header/_AccountDropdown", accountMenu)
+                </div>
             }
         </div>
 
