--- a/ODK.Web.Razor/Pages/Shared/_OdkChapterAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_OdkChapterAdminLayout.cshtml
@@ -35,6 +35,7 @@
 @section scripts
 {
     <script src="/js/odk.admin.js" asp-append-version="true"></script>
+    <script src="~/js/odk.lists.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("scripts", required: false)
 }
