--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -7,6 +7,7 @@
 
 @import "_variables";
 @import "_base";
+@import "_type";
 @import "_utils";
 
 @import "_accordion";
@@ -25,6 +26,7 @@
 @import "_lists";
 @import "_modal";
 @import "_navbar";
+@import "_notifications";
 @import "_overlay";
 @import "_panels";
 @import "_paragraphs";
