--- a/ODK.Web.Razor/wwwroot/css/_notifications.scss
+++ b/ODK.Web.Razor/wwwroot/css/_notifications.scss
@@ -1,10 +1,34 @@
 ﻿.notification-item {
     --odk-notification-item-padding-y: 1rem;
+    --odk-notification-item-padding-x: var(--bs-dropdown-item-padding-x);
     border-top: 1px solid var(--bs-border-color);
     padding: 0;
+    cursor: default;
 
     &:hover {
         background-color: var(--odk-bg-light) !important;
+    }
+
+    .notification-row {
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
+
+    .notification-col {
+        flex-grow: 1;
+    }
+
+    .notification-col-icon {
+        margin-left: auto;
+        padding-right: var(--odk-notification-item-padding-x);
+        align-self: stretch;
+        display: flex;
+    }
+
+    .notification-icon {
+        align-self: center;
+        opacity: 0.5;
     }
 
     .notification-link {
@@ -14,31 +38,40 @@
             & * {
                 background-color: var(--odk-bg-light-hover) !important;
             }
+
+            .notification-icon {
+                opacity: 1;
+            }
         }
     }
 
-    .btn-close {
-        position: absolute;
-        top: var(--odk-notification-item-padding-y);
-        right: var(--bs-dropdown-item-padding-x);
+    .notification-header {
+        margin-top: var(--odk-notification-item-padding-y);
     }
-
-    .notification-title,
-    .notification-text {
-        padding-left: var(--bs-dropdown-item-padding-x);
-        padding-right: calc(3 * var(--bs-dropdown-item-padding-x));
-    }
-
 
     .notification-title {
-        padding-top: var(--odk-notification-item-padding-y);
+        padding-left: var(--odk-notification-item-padding-x);
+        margin-right: 0.5rem;
+    }
+
+    .btn-close {
+        padding: 0;
+        font-size: 0.75em;
     }
 
     .notification-text {
-        padding-bottom: var(--odk-notification-item-padding-y);
+        padding: var(--odk-notification-item-padding-y) var(--odk-notification-item-padding-x);
+
+        p {
+            margin-bottom: 0.5rem;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 
     .notification-placeholder {
-        padding: var(--odk-notification-item-padding-y) var(--bs-dropdown-item-padding-x);
+        padding: var(--odk-notification-item-padding-y) var(--odk-notification-item-padding-x);
     }
 }
