--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -16,6 +16,7 @@
 @import "_breadcrumb";
 @import "_buttons";
 @import "_cards";
+@import "_conversations";
 @import "_datepicker";
 @import "_dropdowns";
 @import "_elements";
