--- a/ODK.Web.Razor/wwwroot/css/_breadcrumb.scss
+++ b/ODK.Web.Razor/wwwroot/css/_breadcrumb.scss
@@ -8,7 +8,7 @@
 }
 
 .breadcrumb {
-    background-color: var(--odk-bg-light);
+    background-color: var(--odk-bg-level-1);
     padding-top: var(--odk-breadcrumbs-padding-top);
     padding-bottom: var(--odk-breadcrumbs-padding-bottom);
     padding-left: var(--odk-breadcrumbs-padding-left);
